[package]
name = "pil2-proofman-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_console = "0.185.0"
deno_core = "0.330.0"
deno_fs = "0.95.0"
deno_io = "0.95.0"
deno_node = { version = "0.123.0", features = ["sync_fs"] }
deno_permissions = "0.44.0"
deno_url = "0.185.0"
deno_web = "0.216.0"
deno_webidl = "0.185.0"
include_dir = "0"
sys_traits = "0.1.6"
tokio = { version = "1", features = ["full"] }
