[package]
name = "pil2-proofman-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0"
deno_cache = "0"
deno_console = "0"
deno_core = "0"
deno_fetch = "0"
deno_fs = "0"
deno_io = "0"
deno_node = { version = "0", features = ["sync_fs"] }
deno_permissions = "0"
deno_resolver = "0"
deno_runtime = "0"
deno_tls = "0"
deno_url = "0"
deno_web = "0"
deno_webidl = "0"
deno_websocket = "0"
include_dir = "0"
sys_traits = "0"
tokio = { version = "1", features = ["full"] }
